--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -11,7 +11,7 @@
 - title: Education
   type: time_table
   contents:
-    - title: PhD
+    - title: PhD in Mathematics
       institution: University of Antwerp, Antwerp, Belgium
       year: 2022
       description:
@@ -21,13 +21,19 @@
           contents:
             - Sub-description 1.
             - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+    - title: M.Sc in Mathematics
+      institution: University of Turin, Turin, Italy
+      year: 2018
       description:
         - Description 1.
         - Description 2.
-
+    - title: B.Sc in Mathematics
+      institution: University of Turin, Turin, Italy
+      year: 2016
+      description:
+        - Description 1.
+        - Description 2.
+        
 - title: Experience
   type: time_table
   contents:
