--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -32,3 +32,6 @@
 "Planck":
   - firstname: ["Max"]
     url: https://en.wikipedia.org/wiki/Max_Planck
+"Shoikhet":
+  - firstname: ["Boris","B"]
+    url: https://scholar.google.com/citations?user=9vS5-bgAAAAJ&hl=en
