--- a/_config.yml
+++ b/_config.yml
@@ -259,7 +259,7 @@ jekyll-archives:
     tag: '/blog/tag/:name/'
     category: '/blog/category/:name/'
 
-display_tags: ['Data Science', 'Hikes', 'TDA', 'Category Theory', 'Deformation Theory'] # this tags will be dispalyed on the front page of your blog
+display_tags: ['Data-Science', 'Hikes', 'TDA', 'Category-Theory', 'Deformation-Theory', 'Images'] # this tags will be dispalyed on the front page of your blog
 
 # -----------------------------------------------------------------------------
 # Jekyll Scholar
