--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -78,7 +78,7 @@
 - title: Open Source Projects
   type: time_table
   contents:
-    - title: <a href="https://github.com/PG-P/">My GitHub</a>
+    - title: <a href="https://github.com/PG-P/">GitHub</a>
       year: 2022-now
       description: A beautiful environment where to learn tons of things.
 
