--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -13,7 +13,7 @@
   contents:
     - title: PhD in Mathematics
       institution: University of Antwerp, Antwerp, Belgium
-      year: 2022
+      year: 2018 - 2022
       description:
         - title: PhD title
           contents:
@@ -44,7 +44,7 @@
           contents:
             - Enumerative geometry in positive characteristic
             
-        - title: B.Sc advisor:
+        - title: B.Sc advisor
           contents:
             - Alberto Collino
             
