--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -26,7 +26,7 @@
             
     - title: M.Sc in Mathematics
       institution: University of Turin, Turin, Italy
-      year: 2018
+      year: 2016 - 2018
       description:
         - title: M.Sc title
           contents:
@@ -38,7 +38,7 @@
             
     - title: B.Sc in Mathematics
       institution: University of Turin, Turin, Italy
-      year: 2016
+      year: 2013 - 2016
       description:
         - title: B.Sc title
           contents:
@@ -51,35 +51,30 @@
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: Research Scientist 
+      institution: University of Antwerp, Antwerp, Belgium
+      year: 2022 - current
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
+        - Research in Data Science and Topological Data Analysis. 
+        - Application and Implementation of algorithms in supervised and unsupervised learning.
+    - title: Data Analysis Internship
+      institution: Brainnest
+      year: 09/2022 - 10/2022
       description:
-        - Description 1.
-        - Description 2.
+        - Statistical analysis on industrial and medical data sheet.
+        - Use of programs R and SPSS, linear regression and ANOVA.
 
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
+    - title: Chair Assistant of Algebraica Topology
+      institution: University of Antwerp, Antwerp, Belgium
+      year: 2019-2022
       description:
+        - Teaching Mathematics Master students theory and exercise lessons (26 hours per semester)
 
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
+    - title: Teaching Assistant 
+      institution: University of Turin, Turin, Italy
+      year: 2017 - 2018
+      description:
+        - Teaching Mathematics and Physics Bachelor students with exercise lessons in class
 
 - title: Open Source Projects
   type: time_table
@@ -88,16 +83,23 @@
       year: 2022-now
       description: A beautiful environment where to learn tons of things.
 
-- title: Honors and Awards
+- title: Awards and Scolarships
   type: time_table
   contents:
-    - year: 1921
+    - year: 2018
       items: 
-        - Nobel Prize in Physics 
-        - Matteucci Medal
-    - year: 2029
+        - Scolarship for summer school on Topological Data Analysis
+        - Scolarship “Erasmus Traineeship”
+    - year: 2017
       items: 
-        - Max Planck Medal
+        - Scolarship for summer school on Modular Forms
+        - Scolarship for summer school on Game Theory and PDE
+    - year: 2014
+      items:
+        - Scolarship “Fondazione CRT” Alpha Class
+    - year: 2013
+      items:
+        - Scolarship “Fondazione CRT” Alpha Class
 
 - title: Academic Interests
   type: nested_list
