--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,10 +1,13 @@
 github_users:
   - PG-P
+  - appliedtopology
 
 github_repos:
   - ctralie/TDALabs
   - GUDHI/TDA-tutorial
   - jisuk1/pllay
+  - appliedtopology/javaplex
+  - appliedtopology/kepler-mapper
   - scikit-learn/scikit-learn
   - academic/awesome-datascience
   - Moataz-Elmesmary/Data-Science-Roadmap
