--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -10,6 +10,7 @@ github_repos:
   - appliedtopology/kepler-mapper
   - scikit-learn/scikit-learn
   - academic/awesome-datascience
+  - youssefHosni/Data-Science-Interview-Preperation-Resources
   - Moataz-Elmesmary/Data-Science-Roadmap
   - EbookFoundation/free-programming-books
   - sindresorhus/awesome
