--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,10 +1,12 @@
 github_users:
   - PG-P
   - appliedtopology
+  - giotto-ai
 
 github_repos:
   - ctralie/TDALabs
   - GUDHI/TDA-tutorial
+  - giotto-ai/giotto-tda
   - jisuk1/pllay
   - appliedtopology/javaplex
   - appliedtopology/kepler-mapper
